# s3-log-extraction

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  assess_streaming_sessions.py  pyproject.toml  setup.py
.github/workflows/: build_and_upload_docker_image_dev.yml  build_and_upload_docker_image_latest.yml  dailies.yml  daily_remote_tests.yml  daily_tests.yml  deploy_tests_on_pull_request.yml  publish_to_pypi_on_github_release.yml  remote_testing.yml  testing.yml  testing_live_services.yml
containers/: Dockerfile.dev  Dockerfile.latest
docs/: design_ideas.md
scripts/: assess_asset_streaming_complexity.py  assess_streaming_sessions.py  prefetch_asset_metadata.py  testing_blobs.txt
src/dandi_s3_log_parser/: __init__.py  _command_line_interface.py  _config.py  _error_collection.py  _generate_all_dandiset_totals.py  _generate_top_level_summaries.py  _globals.py  _hidden_top_level_imports.py  _ip_utils.py  _map_binned_s3_logs_to_dandisets.py  _update_region_codes_to_coordinates.py
src/dandi_s3_log_parser/_extraction/: __init__.py  _s3_access_log_extractor.py
src/dandi_s3_log_parser/_regex/: __init__.py  _globals.py
src/dandi_s3_log_parser/_s3_log_reader/: __init__.py  _s3_log_reader_c.c  _s3_log_reader_c.pyx  _s3_log_reader_classic.py
src/dandi_s3_log_parser/config/: __init__.py  _config.py  _globals.py
src/dandi_s3_log_parser/encryption/: _encryption.py
src/dandi_s3_log_parser/extraction/: __init__.py  _fast_extraction.awk  _s3_log_access_extractor.py
src/dandi_s3_log_parser/testing/: _helpers.py
src/dandi_s3_log_parser/validation/: __init__.py  _base_validator.py  _extraction_heuristic_pre_validator.py  _extraction_heuristic_pre_validator_script.awk  _http_empty_split_pre_validator.py  _http_empty_split_pre_validator_script.awk  _http_split_count_pre_validator.py  _http_split_count_pre_validator_script.awk  _status_code_pre_validator.py  _status_code_pre_validator_script.awk
src/s3_log_extraction/: __init__.py  _hidden_top_level_imports.py  _regex.py  _utils.py
src/s3_log_extraction/_command_line_interface/: _cli.py  _command_line_interface.py
src/s3_log_extraction/_utils/: __init__.py  _parallel.py
src/s3_log_extraction/config/: __init__.py  _config.py  _globals.py  _reset.py
src/s3_log_extraction/database/: _bundle.py
src/s3_log_extraction/encryption_utils/: __init__.py  _encryption.py
test_live_services/test_mapping/: test_map_all_reduced_s3_logs_to_dandisets.py
tests/: test_cli_integration.py  test_config.py  test_config_api.py  test_database.py  test_downloads_logic_pre_validator.py  test_encryption.py  test_extraction_heuristic_pre_validator.py  test_generic_extraction.py  test_generic_summaries.py  test_ip_utils.py  test_log_bucket_stats.py  test_remote.py  test_remote_extractor_inventory.py  test_remote_extractor_update_records.py  test_remote_validator.py
tests/extraction/: test_dandi_extraction.py  test_extraction.py  test_generic_extraction.py
tests/test_mapping/: test_map_all_reduced_s3_logs_to_dandisets.py
tests/test_reduction/: test_reduce_raw_s3_log_bad_lines.py
(+100 files in other folders)
